@@ -1,4 +1,9 @@
 2002-08-29  Borut Razem <borut.razem@siol.net>
+	* sdcc/support/cpp2/auto-host_vc_in.h:
+	re-definition of O_BINARY and other O_XXX as _O_BINARY and _O_XXX, so the problem
+	with the returned value from read() in sdcc/support/cpp2/cppfiles.c is solved for MSC.
+	Maybe there is a similar problem with BORLANDC? It should be checked!
+
 	* sdcc/src/ds390/ralloc.c, sdcc/src/mcs51/ralloc.c, sdcc/src/z80/ralloc.c:
 	corrected improper use of assert: the assignment to clr variable was done inside the assert.
 	In case that NDEBUG was defined, the assert macro was substituted with no-op, so the assignment
